--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,3 +1,5 @@
 {
-  "image": "docker:20.10.6-git"
+  "image": "docker:20.10.6-git",
+  "runArgs": ["--init", "--privileged"],
+  "overrideCommand": false
 }
