chore: testing Docker-in-Docker

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,10 @@
 {
 	"name": "Experiments",
 	"dockerFile": "Dockerfile",
-	"runArgs": ["--init"],
-	"remoteUser": "codespaces",
-	"overrideCommand": false
+	"runArgs": ["--init", "--privileged"],
+	"overrideCommand": false,
+	"extensions": [
+		"ms-azuretools.vscode-docker"
+	],
+	"remoteUser": "codespaces"
 }
