exp(hpc): setup experiment base

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,9 @@
 	"dockerFile": "Dockerfile",
 	"runArgs": ["--init", "--privileged"],
 	"overrideCommand": false,
+	"remoteUser": "vscode",
+	"postStartCommand": "./scripts/install-dev-dependencies.sh",
 	"extensions": [
 		"ms-azuretools.vscode-docker"
-	],
-	"remoteUser": "vscode"
+	]
 }
